# makefile-autotools-cmake

./: README.md
1-make-simple-example/: Makefile  main.c  print.c
2-make-more-complete-example/: Makefile  test.c
3-autotools/: .gitignore  Makefile.am  README.md  configure.ac
4-cmake-simple/: CMakeLists.txt
5-cmake-complete/: CMakeLists.txt
